# foxwhisper-protocol

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  agent_git_workflow.md  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: minimal-smoke.yml  validation.yml
clients/minimal-js/: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: AGENTS-spec.md  ci-cd-integration-guide.md  epoch-fork-simulation-design.md  foxwhisper_roadmap.md  fuzzing-adversarial-architecture.md  go-validators-summary.md  repository-organization.md  sfu-reference-handler-deployment.md  sfu-reference-handler-design.md  v0.9-cbor-examples.md  v0.9-comprehensive-todo-list.md  v0.9-sfu-reference-handler-todo-list.md  v0.9-task-backlog.md
reports/comprehensive/: COMPREHENSIVE_VALIDATION_REPORT.md  v0.8-critical-review-report.md  v0.9-progress-report.md
reports/validation/: CI_CD_INTEGRATION_COMPLETE.md  cbor-validation-schema.md  cbor_validation_report.md
scripts/: validate-ci-nested.sh  validate-ci-simple.sh  validate-ci.sh  validate-node-minimal.sh
scripts/jobs/: cross-language-compatibility.sh  final-report.sh  performance-benchmarks.sh  security-validation.sh  (+5 more)
spec/: e2ee-protocol-specification-v0.1.md  e2ee-protocol-specification-v0.2.md  e2ee-protocol-specification-v0.3.md  e2ee-protocol-specification-v0.4.md  e2ee-protocol-specification-v0.5.md  e2ee-protocol-specification-v0.6.md  e2ee-protocol-specification-v0.7.md  e2ee-protocol-specification-v0.8.1.md  e2ee-protocol-specification-v0.8.md
validation/: AGENTS.md  __init__.py
(+191 files in other folders)
